# mycelium-hypha

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  NOTICE  NuGet.config  README.md  RELEASING.md  mycelium-hypha.sln
.claude-plugin/: marketplace.json  plugin.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_or_feature.md
.github/workflows/: build-test-sonar.yml
agents/: metamodel-navigator.md  spec-citation.md  sysml-validator.md
commands/: overview.md
hooks/: check-spec-pdfs.py
knowledge/: README.md
knowledge/kerml/: index.md
knowledge/metamodel/: index.schema.json  metamodel.schema.json
knowledge/metamodel/elements/: AcceptActionUsage.md  ActionDefinition.md  ActionUsage.md  ActorMembership.md  AllocationDefinition.md  AllocationUsage.md  AnalysisCaseDefinition.md  AnalysisCaseUsage.md  AssertConstraintUsage.md  (+77 more)
knowledge/sysml2/: index.json  index.md  index.schema.json  metamodel.schema.json
knowledge/textual-notation/: index.md
skills/metamodel-lookup/: SKILL.md
skills/spec-citation/: SKILL.md
skills/sysml-validation/: SKILL.md
sources/: README.md
tools/: README.md
tools/metamodel-gen/: README.md
tools/spec-extract/: README.md  pyproject.toml
tools/spec-extract/src/spec_extract/: __init__.py  clauses.py  layout.py  markdown.py  model.py  normative.py  pdf_reader.py  pipeline.py
tools/spec-extract/tests/: conftest.py  test_clauses.py  test_generate.py  test_layout.py  test_markdown.py  test_normative.py  test_pdf_reader.py  test_pipeline.py  test_pipeline_real.py
(+291 files in other folders)
