[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-extract"
version = "0.1.0"
description = "Extract normative text from the OMG PDF specifications into clause-segmented markdown."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Starion Group S.A." }]
dependencies = [
    "pdfplumber>=0.11.4,<0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_extract"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Measure only the product package; keep the test suite itself out of the coverage figures.
source = ["spec_extract"]
omit = ["tests/*"]
